--- a/tmux-gruvbox-dark.conf
+++ b/tmux-gruvbox-dark.conf
@@ -37,7 +37,7 @@ set-option -g status-style attr=none
 set-option -g status-justify "left"
 set-option -g status-left-style attr=none
 set-option -g status-left-length "80"
-set-option -g status-right-status attr="none"
+set-option -g status-right-style none
 set-option -g status-right-length "80"
 set-window-option -g window-status-activity-style attr="none"
 set-window-option -g window-status-style attr="none"
