--- a/tmux-gruvbox-dark.conf
+++ b/tmux-gruvbox-dark.conf
@@ -7,6 +7,7 @@ set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
 # default window title colors
 set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
 
+# default window with an activity alert
 set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
 
 # active window title colors
@@ -19,7 +20,7 @@ set-option -g pane-border-style fg=colour237 #bg1
 # message infos
 set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
 
-# writting commands inactive
+# writing commands inactive
 set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
 
 # pane number display
@@ -33,14 +34,11 @@ set-window-option -g clock-mode-colour colour109 #blue
 set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
 
 ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
-set-option -g status-style attr=none
 set-option -g status-justify "left"
-set-option -g status-left-style attr=none
+set-option -g status-left-style none
 set-option -g status-left-length "80"
 set-option -g status-right-style none
 set-option -g status-right-length "80"
-set-window-option -g window-status-activity-style attr="none"
-set-window-option -g window-status-style attr="none"
 set-window-option -g window-status-separator ""
 
 set-option -g status-left "#[fg=colour248, bg=colour241] #S #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore]"
