--- a/tmux-gruvbox-dark.conf
+++ b/tmux-gruvbox-dark.conf
@@ -1,4 +1,9 @@
 ## COLORSCHEME: gruvbox dark
+
+set-option -g status-interval 1000
+
+set-option -g display-time 2000
+
 set-option -g status "on"
 
 # default statusbar color
@@ -41,8 +46,8 @@ set-option -g status-right-style none
 set-option -g status-right-length "80"
 set-window-option -g window-status-separator ""
 
-set-option -g status-left "#[fg=colour248, bg=colour241] #S #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore]"
-set-option -g status-right "#[fg=colour239, bg=colour237, nobold, nounderscore, noitalics]#[fg=colour246,bg=colour239] %Y-%m-%d  %H:%M #[fg=colour248, bg=colour239, nobold, noitalics, nounderscore]#[fg=colour237, bg=colour248] #h "
+set-option -g status-left "#[fg=colour248, bg=colour241] #S "
+set-option -g status-right "#[fg=colour246,bg=colour239] %H:%M #[fg=colour237, bg=colour248] #h "
 
-set-window-option -g window-status-current-format "#[fg=colour237, bg=colour214, nobold, noitalics, nounderscore]#[fg=colour239, bg=colour214] #I #[fg=colour239, bg=colour214, bold] #W #[fg=colour214, bg=colour237, nobold, noitalics, nounderscore]"
-set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics]#[fg=colour223,bg=colour239] #I #[fg=colour223, bg=colour239] #W #[fg=colour239, bg=colour237, noitalics]"
+set-window-option -g window-status-current-format "#[fg=colour237,bg=colour214,bold] #I #[fg=colour237,bg=colour208, bold] #W "
+set-window-option -g window-status-format "#[fg=colour223,bg=colour245,bold] #I #[fg=colour250, bg=colour243,bold] #W "
