--- a/tmux-gruvbox-dark.conf
+++ b/tmux-gruvbox-dark.conf
@@ -44,10 +44,10 @@ set-option -g status-left-style none
 set-option -g status-left-length "80"
 set-option -g status-right-style none
 set-option -g status-right-length "80"
-set-window-option -g window-status-separator ""
+set-window-option -g window-status-separator " "
 
-set-option -g status-left "#[fg=colour248, bg=colour241] #S "
-set-option -g status-right "#[fg=colour246,bg=colour239] %H:%M #[fg=colour237, bg=colour248] #h "
+set-option -g status-left "#[fg=colour248, bg=colour241] #S #[bg=colour237] "
+set-option -g status-right "#[fg=colour246,bg=colour239] %H:%M #[fg=colour237, bg=colour248] #(whoami)@#h "
 
 set-window-option -g window-status-current-format "#[fg=colour237,bg=colour214,bold] #I #[fg=colour237,bg=colour208, bold] #W "
 set-window-option -g window-status-format "#[fg=colour223,bg=colour245,bold] #I #[fg=colour250, bg=colour243,bold] #W "
